<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">
   >
    <TextView
        android:text="@string/thankyou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        />
     <TableRow
         android:layout_marginBottom="10dp"
        >
         <ImageView
            android:src="@drawable/contact_red"
             android:layout_width="50dp"
             android:layout_height="30dp"

           />
         <TextView
             android:text="@string/contact_instruct"
             android:layout_width="wrap_content"
             android:paddingLeft="4dp"
             android:paddingRight="70dp"

         />
    </TableRow>
    <TableRow
        android:layout_marginBottom="10dp">
        <ImageView
           android:src="@drawable/location_red"
            android:layout_width="50dp"
            android:layout_height="30dp"
            />
        <TextView
            android:text="@string/location_instruct"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="70dp"
            />
    </TableRow>
    <TableRow
        android:layout_marginBottom="10dp">
        <ImageView
            android:src="@drawable/alarm_red"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            />
        <TextView
            android:text="@string/alarm_instruct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="70dp"
            />
    </TableRow>
    <TableRow
        android:layout_marginBottom="10dp">
        <ImageView
            android:src="@drawable/history_red"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            />
        <TextView
            android:text="@string/history_instruct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="70dp"
            />
    </TableRow>
    <TableRow
        android:layout_marginBottom="10dp">
        <ImageView
            android:src="@drawable/country_red"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            />
        <TextView
            android:text="@string/country_instruct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="70dp"
            />
    </TableRow>
    <TableRow
        android:layout_marginBottom="10dp">
        <ImageView
            android:src="@drawable/setting_red"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            />
        <TextView
            android:text="@string/setting_instruct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="70dp"
            />
    </TableRow>
    <TableRow
        android:layout_marginBottom="10dp">
        <ImageView
            android:src="@drawable/danger_red"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            />
        <TextView
            android:text="@string/SOS_instruct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="70dp"
            />
    </TableRow>

    <Button
        android:id="@+id/btn_help_OK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OK"/>

</TableLayout>
