
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity"
    android:background="@drawable/background4">


<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/linearLayout1"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:paddingTop="30dp">
    <Button
        android:id="@+id/btn_goToContactSetting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:drawableTop="@drawable/ic_action_add_group"
        android:gravity="center_vertical|center"
        android:text="@string/contact_setting"
        android:onClick="goToContactSetting"/>
    <Button
        android:id="@+id/btn_goToMyLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:drawableTop="@drawable/ic_action_place"
        android:gravity="center_vertical|center"
        android:onClick="goToMyLocation"
        android:text="@string/check_location"/>
</LinearLayout>
<LinearLayout
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/linearLayout1">

    <Button
        android:id="@+id/btn_goToAlarmSound"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:drawableTop="@drawable/ic_action_new"
        android:gravity="center_vertical|center"
        android:onClick="goToAlarmSound"
        android:text="@string/alarm_sound"/>
    <Button
        android:id="@+id/btn_goToMessageHistory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:drawableTop="@drawable/ic_action_settings"
        android:gravity="center_vertical|center"
        android:onClick="goToMessageHistory"
        android:text="@string/message_history"/>

</LinearLayout>

<LinearLayout
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/linearLayout2">

    <Button
        android:id="@+id/btn_goToMessageSetting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:drawableTop="@drawable/ic_action_phone"
       android:gravity="center_vertical|center"
        android:onClick="goToMessageSetting"
        android:text="@string/message_setting"/>
    <Button
        android:id="@+id/btn_goToAlertSetting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:gravity="center_vertical|center"
        android:drawableTop="@drawable/ic_action_add_alarm"
        android:onClick="goToAlertSetting"
        android:text="@string/alert_setting"/>

</LinearLayout>

<LinearLayout
    android:id="@+id/linearLayout4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/linearLayout3">
   <Button
       android:id="@+id/btn_goToDanger"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:layout_marginTop="10dp"
       android:text="@string/danger"

       android:onClick="goToDangerAlarm"
       android:background="@drawable/background3">

       </Button>

</LinearLayout>

</RelativeLayout>


