<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <RelativeLayout
        android:id="@+id/mainContact"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/linearLayoutContact1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_alignParentTop="true">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:minWidth="110sp"
        android:textSize="16dp"
        android:text="@string/contact_setting_instruction"
       />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayoutContact2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_below="@+id/linearLayoutContact1">
        <Button
            android:id="@+id/btn_AddManually"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:text="@string/add_manually"
            android:background="@drawable/button"
            android:textColor="#FFFFFF"
            android:layout_marginRight="5dp"
           android:onClick="showAddManuallyDialog"/>
        <Button
            android:id="@+id/btn_FromContact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:background="@drawable/button"
            android:textColor="#FFFFFF"
            android:text="@string/from_contact"
            android:onClick="showSubContact"/>
        </LinearLayout>
    <!--contact list appear here-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/linearContactList"
         android:layout_marginTop="10dp"
         android:layout_below="@+id/linearLayoutContact2">
         <TextView
             android:id="@+id/contactListTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:textSize="16dp"
             android:layout_marginLeft="12dp"
             android:layout_marginBottom="4dp"
             android:text="@string/contact_title"
             android:textStyle="bold"
             android:layout_alignParentBottom="true" />
     </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearContactListInstruct"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/linearContactList">
            <TextView
                android:id="@+id/contactListInstruct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="13dp"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="4dp"
                android:text="@string/no_contact"
                android:layout_alignParentBottom="true" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/LinearContactList1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearContactListInstruct">
            <ListView
                android:id="@+id/contactList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></ListView>
            </LinearLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/table_contact"
        android:layout_below="@+id/LinearContactList1"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="2dp">
        </TableRow>
        </TableLayout>
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/subContact"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/subButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp">

        <Button
            android:id="@+id/backMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/backToMain"
            android:onClick="showMainContact"
            android:background="@drawable/button"
            android:textColor="#FFFFFF"
            />
        </LinearLayout>

        <ListView
            android:id="@+id/localContact"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/subButton"
            android:divider="@android:color/black"
            android:dividerHeight="2dp"
            >
        </ListView>


    </RelativeLayout>


</RelativeLayout>

</ScrollView>
