<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
                       android:id="@+id/linearButton"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_alignParentLeft="true"
                       android:paddingTop="@dimen/activity_vertical_margin">
                       <Button
                           android:id="@+id/btn_back"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_weight=".2"
                           android:text="@string/back"
                           android:textSize="12sp"
                        />
                       <TextView
                           android:layout_weight="0.6"
                           android:layout_width="0dp"
                           android:text="@string/editTitle"
                           android:gravity="center"
                           android:textSize="25dp"
                           android:layout_height="wrap_content" />
                       <Button
                           android:id="@+id/btn_save"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_weight=".2"
                           android:text="@string/save"
                           android:textSize="12sp"
                           />
                   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearTitle"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/linearButton">
        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="16dp"
            android:layout_marginLeft="12dp"
            android:layout_marginBottom="4dp"
            android:text="@string/listTitle"
            android:textStyle="bold"
            android:layout_alignParentBottom="true" />

        <!--  divider -->

        </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="1dp"
        android:layout_alignParentBottom="true"

        android:background="#DADADC" ></View>
    <LinearLayout
        android:layout_below="@+id/linearTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ListView
            android:id="@+id/editList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        </LinearLayout>


</RelativeLayout>